# uv-pack

./: README.md  pyproject.toml
.github/workflows/: check.yml  release-drafter.yml  setup.yml  stale.yml
src/uv_pack/: __init__.py  _python.py
src/uv_pack/scripts/: README.md  unpack.ps1  unpack.sh
