[project]
name = "uv-pack"
version = "0.2.0"
description = "Transform your uv project into a portable, offline-ready environment with all dependencies bundled."
readme = "README.md"
authors = [{ name = "David Muhr", email = "muhrdavid+github@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Typing :: Typed"
]
dependencies = [
    "packaging>=24.0",
    "requests>=2",
    "typer>=0.19",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "black>=26.1.0",
    "notebook>=7.5.2",
    "pre-commit>=4.5.1",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.14.14",
]

[project.urls]
source = "https://github.com/davnn/uv-pack"
tracker = "https://github.com/davnn/uv-pack/issues"
"release notes" = "https://github.com/davnn/uv-pack/releases"

[project.scripts]
uv-pack = "uv_pack:main"

[build-system]
requires = ["uv_build>=0.9.25"]
build-backend = "uv_build"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.ruff]
src = ["src"]
extend-exclude = [".github"]
target-version = "py310"
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "ANN401",
    "B008",
    "D203",
    "D211",
    "D213",
    "D401",
    "E731",
    "FBT001",
    "FBT003",
    "PERF402",
    "PGH003",
    "PLR0913",
    "S603",
]
